// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shoud render component 1`] = `
<div
  className="slider "
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
>
  <div
    className="slider__wrapper"
    style={
      Object {
        "transform": "translate3d(0%,0,0)",
      }
    }
  >
    <ul
      className="slider__list"
    >
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide1"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide2"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide3"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide4"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide5"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide6"
        />
      </li>
    </ul>
  </div>
  <div
    className="slider__controls"
  >
    <button
      className="slider__control slider__control--prev"
      onClick={[Function]}
      type="button"
    >
      ←
    </button>
     
    <button
      className="slider__control slider__control--next"
      onClick={[Function]}
      type="button"
    >
      →
    </button>
  </div>
</div>
`;

exports[`should render component with custom props 1`] = `
<div
  className="slider custom-slider-class"
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
>
  <div
    className="slider__wrapper"
    style={
      Object {
        "transform": "translate3d(0%,0,0)",
      }
    }
  >
    <ul
      className="slider__list"
    >
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide1"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide2"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide3"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide4"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide5"
        />
      </li>
      <li
        className="slider__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide6"
        />
      </li>
    </ul>
  </div>
</div>
`;
